Overflow-x property make that sticky property do not apply [Fixed]'

--- a/public/styles.css
+++ b/public/styles.css
@@ -69,8 +69,9 @@ body {
 }
 
 .navbar {
-  position: -webkit-sticky;
-  position: sticky;
+  /* position: -webkit-sticky;  this Property and sticky doesn't match with overflow x property*/
+  position: fixed;
+  width: 94.9%;
   top: 0;
   padding: 35px;
   color: var(--text-color);
